[package]
name = "tamago"
version = "0.1.0"
authors = ["Ziyan Wang <zywong159@gmail.com>"]

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"

[dependencies.lazy_static]
version = "1.0" 
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort" 

[package.metadata.bootimage]
default-target = "tamago"
